# NextCloudTaskMCP

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml
docs/: architecture.md  deployment.md  improvement-plan.md  tools.md
src/nextcloud_task_mcp/: __init__.py  admin.py  auth.py  caldav_client.py  config.py  errors.py  event_mapping.py  mapping.py  personal_auth.py  server.py
tests/: conftest.py  test_admin.py  test_auth.py  test_auth_lifecycle.py  test_caldav_client.py  test_config.py  test_event_mapping.py  test_integration.py  test_mapping.py  test_server.py
