[project]
name = "nextcloud-task-mcp"
version = "0.1.0"
description = "MCP server for managing Nextcloud Tasks (CalDAV VTODOs) via natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Vando" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "fastmcp>=2.9,<3",
    "caldav>=3.0,<4",
    "icalendar>=6.0,<8",
    # Already an indirect dependency via caldav (which uses it for its own
    # DAV element (de)serialization); imported directly here too for the
    # Nextcloud-specific raw DAV requests (sharing, trashbin) that have no
    # caldav library API of their own - see caldav_client.py.
    "lxml>=4.9",
]

[project.urls]
Homepage = "https://github.com/Vando-sketch/NextCloudTaskMCP"
Repository = "https://github.com/Vando-sketch/NextCloudTaskMCP"
Issues = "https://github.com/Vando-sketch/NextCloudTaskMCP/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
nextcloud-task-mcp = "nextcloud_task_mcp.server:main"
nextcloud-task-mcp-admin = "nextcloud_task_mcp.admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# `src/nextcloud_task_mcp/py.typed` (PEP 561 marker, E8) ships in the wheel
# with no extra config: hatchling includes every file under a listed
# package's directory by default. Verified with `uv build --wheel` +
# `unzip -l dist/*.whl` - `nextcloud_task_mcp/py.typed` is present at the
# package root. No `force-include`/`artifacts` entry needed.
packages = ["src/nextcloud_task_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Vendored verbatim from https://github.com/crumrine/fastmcp-personal-auth -
# excluded from lint/format so it stays diffable against upstream.
extend-exclude = ["src/nextcloud_task_mcp/personal_auth.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# Vendored verbatim from https://github.com/crumrine/fastmcp-personal-auth -
# its token-lifecycle test coverage is WP4's job, not this gate's; excluded
# the same way ruff excludes it above.
omit = ["src/nextcloud_task_mcp/personal_auth.py"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
warn_redundant_casts = true
# Vendored verbatim from https://github.com/crumrine/fastmcp-personal-auth -
# excluded from type checking so it stays diffable against upstream (mirrors
# the ruff extend-exclude above). mypy's `exclude` is a regex matched against
# file paths.
exclude = "^src/nextcloud_task_mcp/personal_auth\\.py$"

[[tool.mypy.overrides]]
module = ["caldav.*", "icalendar.*", "requests.*", "niquests.*", "lxml.*"]
ignore_missing_imports = true

# caldav ships its own py.typed stubs, so `ignore_missing_imports` above
# doesn't apply to it (that only covers *missing* stubs) - but those stubs
# type its sync API as `T | Coroutine[Any, Any, T]` (shared with the async
# client), which mypy can't narrow for our sync-only usage, and its
# top-level `caldav.DAVClient`/`Principal`/`Calendar` are PEP 562 lazy
# module attributes mypy can't resolve as concrete classes at all. Skip
# following caldav's stubs entirely rather than fighting either issue;
# `caldav_client.py` imports the concrete classes it needs directly from
# their defining submodules for readability, but they're treated as `Any`
# here either way.
[[tool.mypy.overrides]]
module = ["caldav", "caldav.*"]
follow_imports = "skip"
